[gd_scene load_steps=5 format=3 uid="uid://c0xbuwvocdpwm"]

[ext_resource type="Script" uid="uid://buwwu3ipvhc06" path="res://scripts/gui.gd" id="1_ixbsq"]
[ext_resource type="Script" uid="uid://56odqvkeftc5" path="res://scripts/Inventory_slot.gd" id="2_wdgw4"]
[ext_resource type="FontFile" uid="uid://dlg6nq04rwv0y" path="res://assets/PixelatedEleganceRegular-ovyAA.ttf" id="3_wdgw4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5432"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[node name="Panel" type="Panel"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 760.0
offset_top = 432.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ixbsq")

[node name="Port" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 100.0
offset_right = 73.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a5432")
script = ExtResource("2_wdgw4")
metadata/_custom_type_script = "uid://56odqvkeftc5"

[node name="Port2" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 164.0
offset_right = 73.0
offset_bottom = 204.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a5432")
script = ExtResource("2_wdgw4")
metadata/_custom_type_script = "uid://56odqvkeftc5"

[node name="Starbord" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 129.0
offset_top = 100.0
offset_right = 169.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a5432")
script = ExtResource("2_wdgw4")
type = 1
metadata/_custom_type_script = "uid://56odqvkeftc5"

[node name="Starbord2" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 129.0
offset_top = 164.0
offset_right = 169.0
offset_bottom = 204.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a5432")
script = ExtResource("2_wdgw4")
type = 1
metadata/_custom_type_script = "uid://56odqvkeftc5"

[node name="Keel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 44.0
offset_right = 121.0
offset_bottom = 84.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a5432")
script = ExtResource("2_wdgw4")
metadata/_custom_type_script = "uid://56odqvkeftc5"

[node name="weapons" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = 42.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 4
columns = 3

[node name="clear" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -184.0
offset_top = -80.0
offset_right = -104.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Clear"

[node name="Save" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -80.0
offset_right = -200.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Save
"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -941.0
offset_top = 170.0
offset_right = -533.0
offset_bottom = 258.0
grow_horizontal = 0
theme_override_colors/default_color = Color(1, 0.029834135, 0.24532866, 1)
theme_override_fonts/normal_font = ExtResource("3_wdgw4")
theme_override_font_sizes/normal_font_size = 25
text = "
WEAPONS SELECTED OVER POWER BUDGET"
fit_content = true

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="child_entered_tree" from="Port" to="." method="_on_port_child_entered_tree"]
[connection signal="child_entered_tree" from="Port2" to="." method="_on_port_2_child_entered_tree"]
[connection signal="child_entered_tree" from="Starbord" to="." method="_on_starbord_child_entered_tree"]
[connection signal="child_entered_tree" from="Starbord2" to="." method="_on_starbord_2_child_entered_tree"]
[connection signal="child_entered_tree" from="Keel" to="." method="_on_keel_child_entered_tree"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
